feat(domain): create dns records for ns record
